# phantom-wan-mlx

./: .gitignore  NOTICE  README.md  pyproject.toml
_research/: G1_INJECTION.md  G2_SUBSTRATE.md  G3_CHECKPOINT.md
docs/development/: streaming-vae-decode-port-handoff.md  swift-port-concerns.md
goldens/: umt5_tokenizer_golden.json
phantom_wan_mlx/: __init__.py  config.py  pipeline_mlx.py  sampling.py  streaming_decode.py
phantom_wan_mlx/model/: dit.py  reference.py
phantom_wan_mlx/utils/: weights.py
scripts/: export_mlx.py  gen_demo.py  gen_int4_demo.py
tests/smoke/: test_decode_stream.py  test_dit_forward.py  test_reference.py  test_substrate.py
